# generic_c

./: .clangd  Cargo.toml  flake.nix  input.toml
src/: clap_mod.rs  input_file.rs  main.rs
test_input/header/: hashmap_C__PREFIX__.h
test_input/src/: hashmap_C__PREFIX__.c  vec_C__PREFIX__.c
