[package]
name = "generic_c"
version = "0.1.0"
edition = "2021"
license = "APACHE-2.0 or MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.9"
fastmod = { git = "https://github.com/Maix0/fastmod", version = "0.4.4" }
paste = "1.0.14"
regex = { version = "1.10.2", features = ["std"] }
regex-syntax = "0.8.2"
serde = { version = "1.0.193", features = ["derive", "rc"] }
toml = "0.8.8"
