[package]
name = "generic_c"
version = "0.3.0"
edition = "2021"
license = "APACHE-2.0 or MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
fastmod = { git = "https://github.com/Maix0/fastmod", version = "0.4.4" }
grep-regex = "0.1.14"
paste = "1.0.15"
regex = { version = "1.12.2", features = ["std"] }
regex-syntax = "0.8.8"
serde = { version = "1.0.228", features = ["derive", "rc"] }
toml = "0.9.8"
walkdir = "2.5.0"

[profile.release]
debug = true
